paypal packages adding to the project

--- a/BookBank/Web.config
+++ b/BookBank/Web.config
@@ -92,7 +92,6 @@
   </system.codedom>
   <connectionStrings>
     <add name="BookStoreEntities" connectionString="metadata=res://*/Models.BookModel.csdl|res://*/Models.BookModel.ssdl|res://*/Models.BookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-UGJ99OD;initial catalog=BookStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="data source=DESKTOP-UGJ99OD;initial catalog=BookStore;integrated security=True;"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=DESKTOP-UGJ99OD;initial catalog=BookStore;integrated security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
