--- a/BookBank/packages.config
+++ b/BookBank/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
+  <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net46" />
@@ -31,8 +32,9 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="PayPal" version="1.8.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
