Genre json data is added

--- a/BookBank/BookBank.csproj
+++ b/BookBank/BookBank.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controllers\BooksStoreManagerController.cs" />
     <Compile Include="Controllers\BookStoreController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
+    <Compile Include="Controllers\GenreServiceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ShoppingCartController.cs" />
