--- a/BookBank/bin/BookBank.dll.config
+++ b/BookBank/bin/BookBank.dll.config
@@ -91,7 +91,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="BookStoreEntities" connectionString="metadata=res://*/Models.BookModel.csdl|res://*/Models.BookModel.ssdl|res://*/Models.BookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-UGJ99OD;initial catalog=BookStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BookStoreEntities" connectionString="Server=tcp:bookstoresample1.database.windows.net,1433;Initial Catalog=BookBankDB;Persist Security Info=False;User ID=yousafzaikaleem;Password=Engineer1@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.EntityClient" />
     <add name="DefaultConnection" connectionString="data source=DESKTOP-UGJ99OD;initial catalog=BookStore;integrated security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
